# application

./: .gitignore  .gitmodules  AuthService.cpp  AuthService.h  AuthenticateUser.h  CMakeLists.txt  CMakePresets.json  ConsoleUi.h  InMemoryUserRepository.h  README.md  RegisterUser.h  TODO  User.cpp  User.h  UserRepository.h  a.out  command.txt  main.cpp  readme.md  vcpkg.json
Sensor-Modeling&Parsing-Linux Version/: CMakeLists.txt  data_structures.h  main.cpp  parsers.cpp  parsers.h  test_parsers.cpp
SensorFusion/: CMakeLists.txt  CameraParser.h  SensorTypes.h
SensorFusionTests/: CMakeLists.txt  CameraParser.cpp  RadarParser.cpp  RadarParser.h  tst_sensorfusiontests.cpp
backend/: CMakeLists.txt  main.cpp
backend/entities/: radar.cpp  radar.h  radarstatus.cpp  radarstatus.h  track.h  trackdata.cpp  trackdata.h
backend/interactor/: iauthorizer.cpp  iauthorizer.h  ipresenter.cpp  ipresenter.h  irepository.cpp  irepository.h  radarinteractor.cpp  radarinteractor.h  trackinteractor.cpp  trackinteractor.h
backend/tests/: CMakeLists.txt  backendTest.h  tst_entities.cpp
docs/: class diagram  component diagram  requests.txt  توضیحات دیاگرام توالی.docx
frontend/: CMakeLists.txt
frontend/resources/qml/: App.qml  BorderSide.qml  Functions_Icon_Text.qml  Header_Lable.qml  Latitude_Longitude.qml  Priority_Icon_Text_Icon.qml  Screen01.qml  Sensors.qml  Status.qml
